force-app/main/default/objects/vehicles__x/vehicles__x.object-meta.xml
<CustomObject>
    <description>vehicles</description>
    <externalDataSource>MuleSoft</externalDataSource>
    <externalName>vehicles</externalName>
    <label>vehicles</label>
    <pluralLabel>vehicles</pluralLabel>
</CustomObject>