force-app/main/default/objects/vehicles__x/fields/account__c.field-meta.xml
<CustomField>
    <fullName>account__c</fullName>
    <description>account</description>
    <externalDeveloperName>account</externalDeveloperName>
    <label>account</label>
    <length>128</length>
    <type>Text</type>
</CustomField>