force-app/main/default/objects/vehicles__x/fields/autopilot__c.field-meta.xml
<CustomField>
    <fullName>autopilot__c</fullName>
    <defaultValue>false</defaultValue>
    <description>autopilot</description>
    <externalDeveloperName>autopilot</externalDeveloperName>
    <label>autopilot</label>
    <type>Checkbox</type>
</CustomField>