force-app/main/default/objects/vehicles__x/fields/battery__c.field-meta.xml
<CustomField>
    <fullName>battery__c</fullName>
    <description>battery</description>
    <externalDeveloperName>battery</externalDeveloperName>
    <label>battery</label>
    <length>40</length>
    <type>Text</type>
</CustomField>