force-app/main/default/objects/vehicles__x/fields/billing_status__c.field-meta.xml
<CustomField>
    <fullName>billing_status__c</fullName>
    <description>billing_status</description>
    <externalDeveloperName>billing_status</externalDeveloperName>
    <label>billing_status</label>
    <length>60</length>
    <type>Text</type>
</CustomField>