force-app/main/default/objects/vehicles__x/fields/cancelled__c.field-meta.xml
<CustomField>
    <fullName>cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>cancelled</description>
    <externalDeveloperName>cancelled</externalDeveloperName>
    <label>cancelled</label>
    <type>Checkbox</type>
</CustomField>