force-app/main/default/objects/vehicles__x/fields/contact_name__c.field-meta.xml
<CustomField>
    <fullName>contact_name__c</fullName>
    <description>contact_name</description>
    <externalDeveloperName>contact_name</externalDeveloperName>
    <label>contact_name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>