force-app/main/default/objects/vehicles__x/fields/delivery_date__c.field-meta.xml
<CustomField>
    <fullName>delivery_date__c</fullName>
    <description>delivery_date</description>
    <externalDeveloperName>delivery_date</externalDeveloperName>
    <label>delivery_date</label>
    <type>DateTime</type>
</CustomField>