force-app/main/default/objects/vehicles__x/fields/hydraulic_system__c.field-meta.xml
<CustomField>
    <fullName>hydraulic_system__c</fullName>
    <defaultValue>false</defaultValue>
    <description>hydraulic_system</description>
    <externalDeveloperName>hydraulic_system</externalDeveloperName>
    <label>hydraulic_system</label>
    <type>Checkbox</type>
</CustomField>