force-app/main/default/objects/vehicles__x/fields/interior__c.field-meta.xml
<CustomField>
    <fullName>interior__c</fullName>
    <description>interior</description>
    <externalDeveloperName>interior</externalDeveloperName>
    <label>interior</label>
    <length>128</length>
    <type>Text</type>
</CustomField>