force-app/main/default/objects/vehicles__x/fields/loan_application__c.field-meta.xml
<CustomField>
    <fullName>loan_application__c</fullName>
    <description>loan_application</description>
    <externalDeveloperName>loan_application</externalDeveloperName>
    <label>loan_application</label>
    <length>128</length>
    <type>Text</type>
</CustomField>