force-app/main/default/objects/vehicles__x/fields/manufacturing_status__c.field-meta.xml
<CustomField>
    <fullName>manufacturing_status__c</fullName>
    <description>manufacturing_status</description>
    <externalDeveloperName>manufacturing_status</externalDeveloperName>
    <label>manufacturing_status</label>
    <length>128</length>
    <type>Text</type>
</CustomField>