force-app/main/default/objects/vehicles__x/fields/model__c.field-meta.xml
<CustomField>
    <fullName>model__c</fullName>
    <description>model</description>
    <externalDeveloperName>model</externalDeveloperName>
    <label>model</label>
    <length>128</length>
    <type>Text</type>
</CustomField>