force-app/main/default/objects/vehicles__x/fields/paint__c.field-meta.xml
<CustomField>
    <fullName>paint__c</fullName>
    <description>paint</description>
    <externalDeveloperName>paint</externalDeveloperName>
    <label>paint</label>
    <length>128</length>
    <type>Text</type>
</CustomField>