force-app/main/default/objects/vehicles__x/fields/payment_type__c.field-meta.xml
<CustomField>
    <fullName>payment_type__c</fullName>
    <description>payment_type</description>
    <externalDeveloperName>payment_type</externalDeveloperName>
    <label>payment_type</label>
    <length>128</length>
    <type>Text</type>
</CustomField>