force-app/main/default/objects/vehicles__x/fields/prediction_sample__c.field-meta.xml
<CustomField>
    <fullName>prediction_sample__c</fullName>
    <defaultValue>false</defaultValue>
    <description>prediction_sample</description>
    <externalDeveloperName>prediction_sample</externalDeveloperName>
    <label>prediction_sample</label>
    <type>Checkbox</type>
</CustomField>