force-app/main/default/objects/vehicles__x/fields/rear_seats__c.field-meta.xml
<CustomField>
    <fullName>rear_seats__c</fullName>
    <defaultValue>false</defaultValue>
    <description>rear_seats</description>
    <externalDeveloperName>rear_seats</externalDeveloperName>
    <label>rear_seats</label>
    <type>Checkbox</type>
</CustomField>