force-app/main/default/objects/vehicles__x/fields/sap_id__c.field-meta.xml
<CustomField>
    <fullName>sap_id__c</fullName>
    <defaultValue>false</defaultValue>
    <description>sap_id</description>
    <externalDeveloperName>sap_id</externalDeveloperName>
    <label>sap_id</label>
    <type>Checkbox</type>
</CustomField>