force-app/main/default/objects/vehicles__x/fields/self_driving__c.field-meta.xml
<CustomField>
    <fullName>self_driving__c</fullName>
    <defaultValue>false</defaultValue>
    <description>self_driving</description>
    <externalDeveloperName>self_driving</externalDeveloperName>
    <label>self_driving</label>
    <type>Checkbox</type>
</CustomField>