force-app/main/default/objects/vehicles__x/fields/spoiler__c.field-meta.xml
<CustomField>
    <fullName>spoiler__c</fullName>
    <defaultValue>false</defaultValue>
    <description>spoiler</description>
    <externalDeveloperName>spoiler</externalDeveloperName>
    <label>spoiler</label>
    <type>Checkbox</type>
</CustomField>