force-app/main/default/objects/vehicles__x/fields/sunroof__c.field-meta.xml
<CustomField>
    <fullName>sunroof__c</fullName>
    <defaultValue>false</defaultValue>
    <description>sunroof</description>
    <externalDeveloperName>sunroof</externalDeveloperName>
    <label>sunroof</label>
    <type>Checkbox</type>
</CustomField>