force-app/main/default/objects/vehicles__x/fields/vehicleID__c.field-meta.xml
<CustomField>
    <fullName>vehicleID__c</fullName>
    <description>vehicleID</description>
    <externalDeveloperName>vehicleID</externalDeveloperName>
    <label>vehicleID</label>
    <length>128</length>
    <type>Text</type>
</CustomField>