force-app/main/default/objects/vehicles__x/fields/web_id__c.field-meta.xml
<CustomField>
    <fullName>web_id__c</fullName>
    <description>web_id</description>
    <externalDeveloperName>web_id</externalDeveloperName>
    <label>web_id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>