force-app/main/default/objects/vehicles__x/fields/wheels__c.field-meta.xml
<CustomField>
    <fullName>wheels__c</fullName>
    <description>wheels</description>
    <externalDeveloperName>wheels</externalDeveloperName>
    <label>wheels</label>
    <length>128</length>
    <type>Text</type>
</CustomField>